完善了血量和法力值的限制，建立了拾取物品的UI信息的发送和展示，新增UI信息Tag

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,4 +9,8 @@ InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/Blueprint/GameplayAbilitySystem/GameplayTags/DT_PrimaryAttributes.DT_PrimaryAttributes
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
++GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
++GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
++GameplayTagList=(Tag="Message.ManaPotion",DevComment="")
 
