更新AttributeMenuUI及相关按键UI，初步创建NativeTag以及GameplayTag和AssetManager的单例模式框架

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,6 +60,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/NewMagicLegend")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/NewMagicLegend")
+AssetManagerClassName=/Script/NewMagicLegend.GAST_AssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
