--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,9 +6,10 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagTableList=/Game/Blueprint/GameplayAbilitySystem/GameplayTags/DT_PrimaryAttributes.DT_PrimaryAttributes
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Attributes.Vital.Health",DevComment="")
++GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
