--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartupMap.StartupMap
 EditorStartupMap=/Game/Maps/StartupMap.StartupMap
+GlobalDefaultGameMode=/Script/NewMagicLegend.GAST_Gamemodebase
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -75,4 +76,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
 
