完成了自定义的GameplayContext，完成对格挡和暴击的判定及UI提示设置

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=927187BE43753604A0947BB08E2BEAEB
+
+[/Script/GameplayAbilities.AbilitySystemGlobals]
++AbilitySystemGlobalsClassName="/Script/NewMagicLegend.GAST_AbilitySystemGlobals"
