--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/StartupMap.StartupMap
-EditorStartupMap=/Game/Maps/StartupMap.StartupMap
+GameDefaultMap=/Game/Maps/Dungeons/DungeonMap_One.DungeonMap_One
+EditorStartupMap=/Game/Maps/Dungeons/DungeonMap_One.DungeonMap_One
 GlobalDefaultGameMode=/Script/NewMagicLegend.GAST_Gamemodebase
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
