完成IncomingXP属性的设置，完成初始化被动技能，完成对敌人死亡获取经验的数值设置

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -138,3 +138,6 @@ bAllowClientSideNavigation=True
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/NewMagicLegend.GAST_AttributeSet.InXP",NewName="/Script/NewMagicLegend.GAST_AttributeSet.InComingXP")
